# langchain-virtual-assistant

./: .env.example  .gitignore  README.md  agent.py  asistente_medico.ipynb  gen.py  generator.py  index.py  indexer.py  pyproject.toml
src/langchain_agent_project/: __init__.py
