[tool.poetry]
name = "langchain-agent-project"
version = "0.1.0"
description = "Virtual assistant using LangChain"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.0"
openai = "^1.0.0"
tiktoken = "^0.5.0"
faiss-cpu = "^1.7.4"
pypdf = "^3.0.0"
chromadb = "^0.4.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
python-dotenv = "^1.0.0"
transformers = "^4.36.0"
accelerate = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 