[tool.poetry]
name = "langchain-virtual-assistant"
version = "0.1.0"
description = ""
authors = ["Martin Castro <martincastro.10.5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.0"
openai = "^1.0.0"
tiktoken = "^0.5.0"
faiss-cpu = "^1.7.4" # Keep for now, may remove if fully replaced
pypdf = "^3.0.0" # Keep for now, may remove
chromadb = "^0.4.0" # Keep for now, may remove
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
python-dotenv = "^1.0.0"
transformers = "^4.36.0" # Used by sentence-transformers
accelerate = "^0.25.0"
fpdf = "^1.7.2"
PymuPDF = "^1.23.0" # For reading PDFs in agent for RAG
sentence-transformers = "^2.2.0" # For embedding queries in agent
tqdm = "^4.62.0"
numpy = "^1.26.0" # For similarity calculation
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
