[tool.poetry]
name = "langchain-virtual-assistant"
version = "0.1.0"
description = ""
authors = ["Martin Castro <martincastro.10.5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.0.0"
tiktoken = ">=0.7.0"
faiss-cpu = "^1.7.4"
pypdf = "^3.0.0"
chromadb = "^0.4.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
python-dotenv = "^1.0.0"
transformers = "^4.36.0"
accelerate = "^0.25.0"
fpdf = "^1.7.2"
PymuPDF = "^1.23.0"
sentence-transformers = "^2.2.0"
tqdm = "^4.62.0"
numpy = "^1.26.0"
colorama = "^0.4.6"
langchain = "^0.3.23"
langchain-community = "^0.3.21"
langchain-openai = "^0.3.12"
rank-bm25 = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
